# poetry-pypi-proxy-plugin

./: pyproject.toml
poetry_pypi_proxy_plugin/: __init__.py  mirrored_repo.py
